# chigraph-gui

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Chigraph.srctrlprj  README.md  chigraphgui.desktop  org.chigraph.chigraphgui.desktop  setup.py  setup.sh
.travis/: build.sh  install.sh
icons/: export_svgs_to_png.sh
scripts/: build_frameworks.ps1  format_code.sh  org.chigraph.chigraphgui.appdata.xml
scripts/appimage/: Dockerfile  appimage_recipie.sh
scripts/flatpak/: .gitignore  build_flatpak.sh  org.chigraph.chigraphgui.flatpakref  org.chigraph.chigraphgui.json
src/: CMakeLists.txt  centraltabview.cpp  centraltabview.hpp  chigraphgui.qrc  chigraphguiui.rc  chigraphnodemodel.cpp  chigraphnodemodel.hpp  chigraphplugin.hpp  chiitemselectiondialog.cpp  chiitemselectiondialog.hpp  chiitemselectwidget.cpp  chiitemselectwidget.hpp  execparamlistwidget.cpp  folderselectiondialog.cpp  folderselectiondialog.hpp  folderselectwidget.cpp  folderselectwidget.hpp  functiondetails.cpp  functiondetails.hpp  functioninouts.cpp  functioninouts.hpp  functiontabview.hpp  functionview.cpp  functionview.hpp  launchconfigurationdialog.cpp  launchconfigurationdialog.hpp  launchconfigurationmanager.cpp  launchconfigurationmanager.hpp  localvariables.cpp  main.cpp  mainwindow.cpp  mainwindow.hpp  modulebrowser.cpp  modulebrowser.hpp  modulepropertiesdialog.cpp  modulepropertiesdialog.hpp  moduleselectiondialog.cpp  moduleselectiondialog.hpp  moduleselectwidget.cpp  moduleselectwidget.hpp  (+15 more)
src/debugger/: CMakeLists.txt  breakpointview.cpp  breakpointview.hpp  currentnodedecorator.hpp  debuggerplugin.cpp  debuggerplugin.hpp  debuggerworkerthread.hpp  variableview.cpp  variableview.hpp
